k8s/defectdojo/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elastic-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana.35.195.231.227.nip.io
      secretName: kibana-tls
  rules:
    - host: kibana.35.195.231.227.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secdashboard-kb-http
                port:
                  number: 5601
